[package]
name = "rusty-img-utils"
version = "0.1.5"
authors = ["Axel Örn Sigurðsson <rusty@absalon.dev>"]
edition = "2018"
readme = "README.md"
description = "Image utilities with python bindings"
repository = "https://github.com/ikornaselur/img-utils"
license = "MIT"

[lib]
name = "img_utils"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "img_utils"
path = "src/main.rs"

[dependencies]
image = "0.22.1"

[dependencies.cpython]
version = "0.3.0"
features = ["extension-module"]
